envoy-opa/content/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
  creationTimestamp: "2021-06-20T15:30:49Z"
  generation: 4
  labels:
    app: content
  name: content
  namespace: default
  resourceVersion: "20867"
  selfLink: /apis/apps/v1/namespaces/default/deployments/content
  uid: 9c966a35-c0e9-4eb3-b7ba-80ff11d2a404
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: content
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2021-06-21T01:13:46+05:30"
      creationTimestamp: null
      labels:
        app: content
    spec:
      containers:
      - image: rjshrjndrn/headerecho:v3
        imagePullPolicy: IfNotPresent
        name: headerecho
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - args:
        - envoy
        - --config-path
        - /config/envoy-content.yaml
        env:
        - name: ENVOY_UID
          value: "1111"
        image: envoyproxy/envoy:v1.17.0
        imagePullPolicy: IfNotPresent
        name: envoy
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: proxy-config
          readOnly: true
      - args:
        - run
        - --server
        - --addr=localhost:8181
        - --diagnostic-addr=0.0.0.0:8282
        - --set=plugins.envoy_ext_authz_grpc.addr=:9191
        - --set=plugins.envoy_ext_authz_grpc.path=envoy/authz/allow
        - --set=decision_logs.console=true
        - --ignore=.*
        - /policy/policy-lms-content.rego
        image: openpolicyagent/opa:latest-envoy
        imagePullPolicy: IfNotPresent
        name: opa
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /policy
          name: opa-policy
          readOnly: true
      dnsPolicy: ClusterFirst
      initContainers:
      - args:
        - -p
        - "8888"
        - -u
        - "1111"
        - -w
        - "8282"
        image: openpolicyagent/proxy_init:v5
        imagePullPolicy: IfNotPresent
        name: proxy-init
        resources: {}
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
          runAsNonRoot: false
          runAsUser: 0
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: content-proxy-config
        name: proxy-config
      - name: opa-policy
        secret:
          defaultMode: 420
          secretName: policy-lms-content
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-06-20T15:31:03Z"
    lastUpdateTime: "2021-06-20T15:31:03Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2021-06-20T15:30:49Z"
    lastUpdateTime: "2021-06-20T19:44:14Z"
    message: ReplicaSet "content-7bc459797d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
