envoy-opa/content/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: content
  name: content
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31085
    port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: content
  sessionAffinity: None
  type: LoadBalancer
